tests/fixtures/guardrails/valid/app/routes/webhooks.products.update-namespace.ts
import * as webhookDomain from "~/domain/webhooks";

export const action = async () => webhookDomain.enqueueWebhookInboxEvent();
