tests/fixtures/guardrails/invalid/webhook-dynamic-import-bypass/app/routes/webhooks.app.uninstalled.ts
const delegatedTarget = "~/domain/webhooks/enqueue.server";
const warmupImport = import(delegatedTarget);

export const action = async () => import("./helper");

void warmupImport;
